Implementación del login

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>CursoAngular</title>
+	<title>Ministerio de Trabajo</title>
 	<base href="/">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -24,6 +24,7 @@
 	</script>
 
 </head>
+
 <body>
 	<my-app></my-app>
 </body>
