--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,8 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
 		integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
 	</script>
+
+	<script src="https://cdn.ckeditor.com/4.14.1/full/ckeditor.js"></script>
 </head>
 
 <body>
